@@ -1,0 +1,399 @@
+<?php
+
+return ezcDocumentRstDocumentNode::__set_state(array(
+   'depth' => 0,
+   'line' => 0,
+   'position' => 0,
+   'type' => 1,
+   'nodes' => 
+  array (
+    0 => 
+    ezcDocumentRstSectionNode::__set_state(array(
+       'title' => 
+      ezcDocumentRstTitleNode::__set_state(array(
+         'line' => 2,
+         'position' => 1,
+         'type' => 2,
+         'nodes' => 
+        array (
+          0 => 
+          ezcDocumentRstTextLineNode::__set_state(array(
+             'line' => 1,
+             'position' => 1,
+             'type' => 4,
+             'nodes' => 
+            array (
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 5,
+               'content' => 'Reference with underscores',
+               'line' => 1,
+               'position' => 1,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+          1 => 
+          ezcDocumentRstTextLineNode::__set_state(array(
+             'line' => 1,
+             'position' => 27,
+             'type' => 4,
+             'nodes' => 
+            array (
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 2,
+               'content' => '',
+               'line' => 1,
+               'position' => 27,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+        ),
+         'token' => 
+        ezcDocumentRstToken::__set_state(array(
+           'type' => 4,
+           'content' => '==========================',
+           'line' => 2,
+           'position' => 1,
+           'escaped' => false,
+        )),
+         'identifier' => NULL,
+      )),
+       'depth' => 1,
+       'reference' => NULL,
+       'line' => 2,
+       'position' => 1,
+       'type' => 1,
+       'nodes' => 
+      array (
+        0 => 
+        ezcDocumentRstParagraphNode::__set_state(array(
+           'indentation' => 0,
+           'line' => 4,
+           'position' => 102,
+           'type' => 3,
+           'nodes' => 
+          array (
+            0 => 
+            ezcDocumentRstTextLineNode::__set_state(array(
+               'line' => 4,
+               'position' => 1,
+               'type' => 4,
+               'nodes' => 
+              array (
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 5,
+                 'content' => 'A',
+                 'line' => 4,
+                 'position' => 1,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            1 => 
+            ezcDocumentRstExternalReferenceNode::__set_state(array(
+               'target' => false,
+               'line' => 4,
+               'position' => 35,
+               'type' => 41,
+               'nodes' => 
+              array (
+                0 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 1,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'reference',
+                     'line' => 4,
+                     'position' => 1,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                1 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 12,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 4,
+                     'content' => '_',
+                     'line' => 4,
+                     'position' => 12,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                2 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 13,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'containing',
+                     'line' => 4,
+                     'position' => 13,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                3 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 23,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 4,
+                     'content' => '_',
+                     'line' => 4,
+                     'position' => 23,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                4 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 24,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'underscores',
+                     'line' => 4,
+                     'position' => 24,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '_',
+                 'line' => 4,
+                 'position' => 35,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            2 => 
+            ezcDocumentRstTextLineNode::__set_state(array(
+               'line' => 4,
+               'position' => 36,
+               'type' => 4,
+               'nodes' => 
+              array (
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 1,
+                 'content' => ' and one=',
+                 'line' => 4,
+                 'position' => 36,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            3 => 
+            ezcDocumentRstExternalReferenceNode::__set_state(array(
+               'target' => false,
+               'line' => 4,
+               'position' => 61,
+               'type' => 41,
+               'nodes' => 
+              array (
+                0 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 37,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'with-other',
+                     'line' => 4,
+                     'position' => 37,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                1 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 55,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 4,
+                     'content' => '_',
+                     'line' => 4,
+                     'position' => 55,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+                2 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 56,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'chars',
+                     'line' => 4,
+                     'position' => 56,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '_',
+                 'line' => 4,
+                 'position' => 61,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            4 => 
+            ezcDocumentRstTextLineNode::__set_state(array(
+               'line' => 4,
+               'position' => 62,
+               'type' => 4,
+               'nodes' => 
+              array (
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '. But it should not aggregate (',
+                 'line' => 4,
+                 'position' => 62,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            5 => 
+            ezcDocumentRstExternalReferenceNode::__set_state(array(
+               'target' => false,
+               'line' => 4,
+               'position' => 99,
+               'type' => 41,
+               'nodes' => 
+              array (
+                0 => 
+                ezcDocumentRstTextLineNode::__set_state(array(
+                   'line' => 4,
+                   'position' => 93,
+                   'type' => 4,
+                   'nodes' => 
+                  array (
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 5,
+                     'content' => 'braces',
+                     'line' => 4,
+                     'position' => 93,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '_',
+                 'line' => 4,
+                 'position' => 99,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            6 => 
+            ezcDocumentRstTextLineNode::__set_state(array(
+               'line' => 4,
+               'position' => 100,
+               'type' => 4,
+               'nodes' => 
+              array (
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => ').',
+                 'line' => 4,
+                 'position' => 100,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+          ),
+           'token' => 
+          ezcDocumentRstToken::__set_state(array(
+             'type' => 2,
+             'content' => '
+',
+             'line' => 4,
+             'position' => 102,
+             'escaped' => false,
+          )),
+           'identifier' => NULL,
+        )),
+      ),
+       'token' => 
+      ezcDocumentRstToken::__set_state(array(
+         'type' => 4,
+         'content' => '==========================',
+         'line' => 2,
+         'position' => 1,
+         'escaped' => false,
+      )),
+       'identifier' => NULL,
+    )),
+  ),
+   'token' => NULL,
+   'identifier' => NULL,
+));
+
