@@ -11,6 +11,7 @@
   files can be located.
 - Fixed: Text blocks are continued on the same page wrapped images are
   rendered on.
+- Fixed: Handle unescaped references containing special chars in RST parser.
 
 
 1.2alpha1 - Tuesday 26 May 2009
